<resources>
    <string name="app_name">VishuNotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RegisterFragment -->
    <string name="register_heading">Create New Account</string>
    <string name="register_sub_heading">Please provide all the required information</string>
    <string name="username">Username</string>
    <string name="username_hint">visheshmittal</string>
    <string name="email">Email</string>
    <string name="email_hint">vishesh@vm.com</string>
    <string name="password">Password</string>
    <string name="password_hint">........</string>
    <string name="sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <u>Sign In</u></string>

    <!-- LoginFragment -->
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your notes</string>
    <string name="txt_login">Login</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>

    <!-- NoteFragment -->
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>

</resources>